# bible-skill

./: .gitignore  CHANGELOG.md  CLEAN_ROOM_BRIEF.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-ja.md  README-zh.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bible_skill/: __init__.py  books.py  cli.py  extract.py  providers.py  query.py  references.py  release_check.py  search.py  skill_template.py  store.py
docs/: local-agent-smoke-transcript.md
scripts/: create_tiny_fixture_cache.py
skills/bible-skill/: SKILL.md
tests/: fixtures.py  test_cli.py  test_extract.py  test_providers.py  test_query.py  test_readme_docs.py  test_references.py  test_release_check.py  test_search.py  test_skill_template.py  test_store.py
