[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bible-skill"
version = "0.1.0"
description = "Deterministic local Bible passage lookup for AI-agent workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Bible Skill contributors" }]
keywords = ["bible", "scripture", "cli", "ai-agent", "skill"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
bible-skill = "bible_skill.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff", "build"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
